2003-08-05  Miguel Sofer <msofer@users.sf.net>

	* generic/tclexecute.c (INST_INVOKE, INST_EVAL, INST_PUSH_RESULT):
	added a Tcl_ResetResult(interp) at each point where the interp's
	result is pushed onto the stack, to avoid keeping an extra
	reference that may cause costly Tcl_Obj duplication [Bug 781585]
	Detected by Franco Violi, analyzed by Peter Spjuth and Donal
	Fellows. 

2003-07-28  Vince Darley  <vincentdarley@users.sourceforge.net>

	* doc/FileSystem.3:
	* doc/Translate.3: better documentation of Tcl_TranslateFileName
	and related functions [Bug 775220]

2003-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tcl.h: Revert change made on 2003-07-21
	since it made the sizeof(Tcl_Obj) different for
	regular vs mem debug builds.
	* generic/tclInt.h: Define TclDecrRefCount in terms
	of Tcl_DbDecrRefCount which removes one layer of
	inderection.
	* generic/tclObj.c (TclDbInitNewObj, Tcl_DbIncrRefCount,
	Tcl_DbDecrRefCount, Tcl_DbIsShared):
	Define ThreadSpecificData that contains a hashtable.
	The table is used to ensure that a Tcl_Obj is only
	acted upon in the thread that allocated it. This
	checking code is enabled only when mem debug and
	threads are enabled.

2003-07-24  Don Porter  <dgp@users.sourceforge.net>

	* tests/async.test:	Added several tests that demonstrate Tcl
	* tests/basic.test:	Bug 489537, Tcl's longstanding failure to
	* tests/dict.test:	properly quote any leading '#' character
	* tests/dstring.test:	when generating the string rep of a list
	* tests/list.test:	so that the comment-power of that character
	* tests/parse.test:	is hidden from any [eval], in order to 
	* tests/util.test:	satisfy the documentation that [list] does
	[eval]-safe quoting.

2003-07-24  Reinhard Max  <max@suse.de>

        * library/package.tcl: Fixed a typo that broke pkg_mkIndex -verbose.
        * tests/pkgMkIndex.test: Added a test for [pkg_mkIndex -verbose].

        * ChangeLog.2002 (new file):